--- a/3~6장 실습공간/pom.xml
+++ b/3~6장 실습공간/pom.xml
@@ -14,9 +14,9 @@
     <dependencies>
         <!-- unit testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -57,8 +57,6 @@
             <version>3.22.0</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
